# granite-reckoner

./: Cargo.toml  README.md  TODO.txt  data_10M.csv  data_20M.csv  data_5M.csv  postgres_comparison.txt
benches/: benches.rs
src/: aggregator.rs  column_data.rs  constants.rs  lib.rs  main.rs  tools.rs  traits.rs
tests/: integration_test.rs
tests/common/: mod.rs
