[package]
name = "granite_reckoner"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple aggregator enabling basic statistical operations on Vec<T> in the specified number of threads. Works for all Rust's built-in numeric types."
readme = "README.md"
repository = "https://github.com/MateuszWalewski/granite-reckoner"

[dependencies]
assert_approx_eq = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
